# win-chess

./: .gitignore  CMakeLists.txt
scripts/mingw/: build.bat  clean.bat  reconfig.bat  run.bat  setup.bat
scripts/msvc/: build.bat  reconfig.bat  run.bat  setup.bat
src/: Main.cpp  Timer.cpp  Timer.h  Window.cpp  Window.h  pch.h
src/ChessEngine/: BitUtils.h  Board.cpp  Board.h  ChessEngine.cpp  ChessEngine.h  ChessEngineAPI.cpp  ChessEngineAPI.h  Magic.cpp  Magic.h  Pieces.cpp  Pieces.h
src/ChessEngine/Test/: Test.cpp  Test.h
src/ExternalBuild/: ImGuiBuild.cpp
src/Graphics/: Texture.cpp  Texture.h
src/legacy/: ChessEngine.cpp  ChessEngine.h
